--- a/overlay/frameworks/base/core/res/res/xml/power_profile.xml
+++ b/overlay/frameworks/base/core/res/res/xml/power_profile.xml
@@ -1,65 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+**
+** Copyright 2013, The Android Open Source Project
+**
+** Licensed under the Apache License, Version 2.0 (the "License")
+** you may not use this file except in compliance with the License.
+** You may obtain a copy of the License at
+**
+**     http://www.apache.org/licenses/LICENSE-2.0
+**
+** Unless required by applicable law or agreed to in writing, software
+** distributed under the License is distributed on an "AS IS" BASIS,
+** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+** See the License for the specific language governing permissions and
+** limitations under the License.
+*/
+-->
 <device name="Android">
+    <!-- All values are in mAh except as noted -->
     <item name="none">0</item>
-    <item name="screen.on">116.5</item>
-    <item name="screen.full">142.9</item>
-    <item name="bluetooth.on">0.6</item>
-    <item name="bluetooth.active">203.5</item>
-    <item name="wifi.on">0.1</item>
-    <item name="wifi.scan">106.9</item>
-    <item name="wifi.active">337.3</item>
-    <item name="gps.on">0.1</item>
-    <item name="dsp.audio">86.3</item>
-    <item name="dsp.video">249.9</item>
-    <item name="radio.active">250</item>
-    <item name="radio.scanning">82</item>
-    <array name="radio.on">
-        <value>3.4</value>
-        <value>3.4</value>
+    <item name="screen.on">48.07</item>
+    <item name="screen.full">221.9.9</item>
+    <item name="bluetooth.on">0.79</item>
+    <item name="bluetooth.active">93.52</item>
+    <item name="wifi.on">3.5</item>
+    <item name="wifi.scan">75.48</item>
+    <item name="wifi.active">73.24</item>
+    <item name="gps.on">90.8</item>
+    <item name="dsp.audio">0.1</item>
+    <item name="dsp.video">0.1</item>
+    <item name="radio.active">185.19</item>
+    <!-- The current consumed by the radio when it is scanning for a signal -->
+    <item name="radio.scanning">99.2</item>
+    <!-- Current consumed by the radio at different signal strengths, when paging -->
+    <array name="radio.on"> <!-- Strength 0 to BINS-1 -->
+        <value>1.16</value>
+        <value>2.15</value>
     </array>
     <array name="cpu.speeds">
-        <value>1800000</value>
-        <value>1700000</value>
-        <value>1600000</value>
-        <value>1500000</value>
-        <value>1400000</value>
-        <value>1300000</value>
-        <value>1200000</value>
-        <value>1100000</value>
-        <value>1000000</value>
-        <value>900000</value>
-        <value>800000</value>
-        <value>600000</value>
-        <value>550000</value>
-        <value>500000</value>
-        <value>450000</value>
-        <value>400000</value>
-        <value>350000</value>
-        <value>300000</value>
-        <value>250000</value>
+        <value>250000</value> <!-- 250 MHz CPU speed -->
+        <value>300000</value> <!-- 300 MHz CPU speed -->
+        <value>422400</value> <!-- 422.4 MHz CPU speed -->
+        <value>652800</value> <!-- 652.8 MHz CPU speed -->
+        <value>729600</value> <!-- 729.6 MHz CPU speed -->
+        <value>883200</value> <!-- 883.2 MHz CPU speed -->
+        <value>960000</value> <!-- 960.0 MHz CPU speed -->
+        <value>1036800</value> <!-- 1036.8 MHz CPU speed -->
+        <value>1190400</value> <!-- 1190.4 MHz CPU speed -->
+        <value>1267200</value> <!-- 1267.2 MHz CPU speed -->
+        <value>1497600</value> <!-- 1497.6 MHz CPU speed -->
+        <value>1574000</value> <!-- 1574.0 MHz CPU speed -->
+        <value>1600000</value> <!-- 1600.0 MHz CPU speed -->
     </array>
-    <item name="cpu.idle">2.5</item>
-    <item name="cpu.awake">62.3</item>
+    <item name="cpu.idle">3.2</item>
+    <item name="cpu.awake">17.4</item>
     <array name="cpu.active">
-        <value>1175</value>
-        <value>1545</value>
-        <value>1860</value>
-        <value>1619</value>
-        <value>1293</value>
-        <value>1043</value>
-        <value>841</value>
-        <value>704</value>
-        <value>571</value>
-        <value>455</value>
-        <value>387</value>
-        <value>182</value>
-        <value>146</value>
-        <value>118</value>
-        <value>94</value>
-        <value>75</value>
-        <value>60</value>
-        <value>45</value>
-        <value>35</value>
+        <value>35</value> <!-- 250 MHz CPU speed -->
+        <value>57.9</value> <!-- 300 MHz CPU speed -->
+        <value>88.2</value> <!-- 422.4 MHz CPU speed -->
+        <value>99.6</value> <!-- 652.8 MHz CPU speed -->
+        <value>138.8</value> <!-- 729.6 MHz CPU speed -->
+        <value>149.6</value> <!-- 883.2 MHz CPU speed -->
+        <value>170.2</value> <!-- 960.0 MHz CPU speed -->
+        <value>178.3</value> <!-- 1036.8 MHz CPU speed -->
+        <value>189.1</value> <!-- 1190.4 MHz CPU speed -->
+        <value>232.1</value> <!-- 1267.2 MHz CPU speed -->
+        <value>256.5</value> <!-- 1497.6 MHz CPU speed -->
+        <value>266.4</value> <!-- 1574.0 MHz CPU speed -->
+        <value>278.7</value> <!-- 1600.0 MHz CPU speed -->
     </array>
     <item name="battery.capacity">2600</item>
+    
+    <array name="wifi.batchedscan"> <!-- mA.  Current figures based on .0801 s/c and 75.48mA while scanning -->
+        <value>.0076</value> <!-- 1-8/hr -->
+        <value>.0613</value>  <!-- 9-64/hr -->
+        <value>.4845</value>   <!-- 65-512/hr -->
+        <value>3.870</value>    <!-- 513-4096/hr -->
+        <value>30.96</value>   <!-- 4097-?/hr -->
+    </array>
 </device>
