--- a/overlay/packages/services/Telephony/res/values/config.xml
+++ b/overlay/packages/services/Telephony/res/values/config.xml
@@ -23,4 +23,7 @@
     <bool name="send_mic_mute_to_AudioManager">true</bool>
     <!-- Flag indicating if the tty is enabled -->
     <bool name="tty_enabled">true</bool>
+    
+    <!-- Volume Rocker Wake -->
+    <bool name="config_show_volumeRockerWake">true</bool>
 </resources>
