--- a/overlay/frameworks/base/core/res/res/values/arrays.xml
+++ b/overlay/frameworks/base/core/res/res/values/arrays.xml
@@ -21,7 +21,7 @@
 
     <!-- Defines the shutdown options shown in the reboot dialog. -->
         <array name="shutdown_reboot_options" translatable="false">
-        <item>@string/reboot</item>
+        <item>@string/reboot_reboot</item>
         <item>@string/reboot_recovery</item>
         <item>@string/reboot_download</item>
     </array>
@@ -31,7 +31,7 @@
         <string-array name="shutdown_reboot_actions" translatable="false">
         <item></item>
         <item>recovery</item>
-        <item>bootloader</item>
+        <item>download</item>
     </string-array>
 
 </resources>
